# ParLeastSquares

./: .gitignore  CMakeLists.txt  README.md  build.sh  readme.md  setup.py
ParLeastSquares.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cmake/: FindEigen.cmake  FindPybind11System.cmake  FindPythonComponents.cmake
levmar_eigen/: __init__.py
scripts/: __init__.py  example_mods.sh
setuptools_cmake/: __init__.py
src/: CMakeLists.txt
src/ParLeastSquares/: .par_ls.cpp.swp  CMakeLists.txt  ParLeastSquares.cpp  par_ls.cpp
src/ParLeastSquares/include/: LMFunctor.hpp  LMFunctorAnalytical.hpp  ParLeastSquares  ParLeastSquares.hpp  interface.hpp  par_ls_defs.hpp.in  utilities.hpp
src/ParLeastSquares/src/: LMFunctor.cpp  LMFunctorAnalytical.cpp  interface.cpp  utilities.cpp
src/pymodule/: CMakeLists.txt  module.cpp
test_python/Basic_Test/: glycolysis_tca.py
tests/: CMakeLists.txt  driver.cpp  test_call.py  test_call_interface.cpp  test_call_op.cpp  test_minimize.cpp
tests/cpp/: CMakeLists.txt  driver.cpp  least_squares.cpp
tests/cpp/include/: TestDriver.hpp  test_utilities.hpp
tests/cpp/src/: TestDriver.cpp  test_utilities.cpp
tests/cpp/tests/: TestDriver.cpp  test_call_interface.cpp  test_call_op.cpp  test_minimize.cpp
tests/data/tca_glycolosis/: ._Keq_constant.txt  ._P_mat.mtx  ._R_mat.mtx  ._S_mat.mtx  ._f_log_counts.txt  ._results.mtx  ._state.txt  ._v_log_counts.txt  Keq_constant.txt  P_mat.mtx  R_mat.mtx  S_mat.mtx  f_log_counts.txt  results.mtx  v_log_counts.txt
tests/python/: test_call.py
tests/python/glycolysis_tca/: cellwall.py  machine_learning_functions_test_par.py  max_entropy_functions.py
tests/test_cases/restricted/: inputs.p  results.p
tools/setup_helpers/: __init__.py  cmake_setuptools.py  extra_setuptools_commands.py  utils.py
